--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="defaultConnString" connectionString="Data Source=DESKTOP-QHBLKCC\LOGIZIK_SQL;Initial Catalog=Fyxme;User ID=FyxmeUsr;Password=Whatsup529!" providerName="System.Data.SqlClient" />
+    <add name="defaultConnString" connectionString="Data Source=fyxme.database.windows.net;Initial Catalog=fyxme;User ID=FyxmeAdmin;Password=Whatsup529!" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
