--- a/Fyxme/Fyxme.csproj
+++ b/Fyxme/Fyxme.csproj
@@ -205,7 +205,7 @@
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\Old\IdentityModels.cs" />
     <Compile Include="Models\Old\ManageViewModels.cs" />
-    <Compile Include="Models\RequestClientFormModels.cs" />
+    <Compile Include="Models\Request.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
