--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -17,6 +17,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="uploadPicsDirectory" value="~/Content/Upload/Pictures/" />
+    <add key="EmailSmtpHost" value="smtp.gmail.com" />
+    <add key="EmailFrom" value="fyxme@info.com" />
+    <add key="EmailPort" value="587" />
+    <add key="EmailNetworkCredentialUser" value="logiziktech@gmail.com" />
+    <add key="EmailNetworkCredentialPassword" value="paris535" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
