--- a/Fyxme/Fyxme.csproj
+++ b/Fyxme/Fyxme.csproj
@@ -289,6 +289,7 @@
     <Content Include="Content\Images\winner_ico.png" />
     <Content Include="Content\Images\winner_ico_2x.png" />
     <Content Include="Content\Css\jquery.bxslider.css" />
+    <Content Include="Content\MailTemplates\MailSendLeadConfirmRequestReceived.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
