--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -21,7 +21,8 @@
     <add key="EmailFrom" value="fyxme@info.com" />
     <add key="EmailPort" value="587" />
     <add key="EmailNetworkCredentialUser" value="logiziktech@gmail.com" />
-    <add key="EmailNetworkCredentialPassword" value="paris999" />
+    <add key="EmailNetworkCredentialPassword" value="paris535" />
+    <add key="EmailAdmin" value="tghis@hotmail.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
