--- a/Fyxme/Fyxme.csproj
+++ b/Fyxme/Fyxme.csproj
@@ -222,7 +222,13 @@
     <Content Include="Content\Images\2015-11-15%2520024013.jpg" />
     <Content Include="Content\Images\2015-11-15%2520024052.jpg" />
     <Content Include="Content\Images\2015-11-15%2520032257_mod.jpg" />
+    <Content Include="Content\Images\Admin\ico_cases.png" />
+    <Content Include="Content\Images\Admin\ico_invoices.png" />
+    <Content Include="Content\Images\Admin\ico_jobs.png" />
     <Content Include="Content\Images\Admin\ico_pwd.png" />
+    <Content Include="Content\Images\Admin\ico_search.png" />
+    <Content Include="Content\Images\Admin\ico_settings.png" />
+    <Content Include="Content\Images\Admin\ico_technicians.png" />
     <Content Include="Content\Images\Admin\ico_user.png" />
     <Content Include="Content\Images\arrow_left.png" />
     <Content Include="Content\Images\arrow_right.png" />
@@ -355,10 +361,11 @@
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Shared\_LayoutAdminLogin.cshtml" />
     <Content Include="Views\Admin\Case.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Shared\_LayoutPartialAdminlLogin.cshtml" />
+    <Content Include="Views\Shared\_LayoutPartialAdminTop.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
