--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="defaultConnString" connectionString="Data Source=fyxme.database.windows.net;Initial Catalog=fyxme;User ID=FyxmeAdmin;Password=Whatsup529!" providerName="System.Data.SqlClient" />
+    <add name="fyxmeDataModel" connectionString="data source=fyxme.database.windows.net;initial catalog=fyxme;User ID=FyxmeAdmin;Password=Whatsup529!;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
