--- a/Fyxme/Fyxme.csproj
+++ b/Fyxme/Fyxme.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Entities\IModificationHistory.cs" />
     <Compile Include="Entities\Lead.cs" />
     <Compile Include="Entities\Status.cs" />
+    <Compile Include="Entities\Technician.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -228,7 +229,8 @@
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\Old\IdentityModels.cs" />
     <Compile Include="Models\Old\ManageViewModels.cs" />
-    <Compile Include="Models\Request.cs" />
+    <Compile Include="Models\TechnicianRequestViewModel.cs" />
+    <Compile Include="Models\RequestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -336,6 +338,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\fyxme %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\fyxme.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery.modal.js" />
@@ -389,6 +392,8 @@
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Views\Shared\_LayoutPartialAdminlLogin.cshtml" />
     <Content Include="Views\Shared\_LayoutPartialAdminTop.cshtml" />
+    <Content Include="Views\Home\_PartialRequestTechnicianView.cshtml" />
+    <Content Include="Views\Home\_PartialRequestView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
