--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -18,12 +18,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="uploadPicsDirectory" value="~/Content/Upload/Pictures/" />
+    <add key="uploadResumeDirectory" value="~/Content/Upload/Pictures/" />
     <add key="EmailSmtpHost" value="smtp.gmail.com" />
     <add key="EmailFrom" value="fyxme@info.com" />
     <add key="EmailPort" value="587" />
     <add key="EmailNetworkCredentialUser" value="logiziktech@gmail.com" />
     <add key="EmailNetworkCredentialPassword" value="paris535" />
-    <add key="EmailAdmin" value="tghis@hotmail.com" />
+    <add key="EmailAdmin" value="tghis@hotmail.com,madagho@gmail.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
