--- a/Fyxme/Web.config
+++ b/Fyxme/Web.config
@@ -20,11 +20,11 @@
     <add key="uploadPicsDirectory" value="~/Content/Upload/Pictures/" />
     <add key="uploadResumeDirectory" value="~/Content/Upload/Pictures/" />
     <add key="EmailSmtpHost" value="smtp.gmail.com" />
-    <add key="EmailFrom" value="fyxme@info.com" />
+    <add key="EmailFrom" value="no-reply@fyxme.com" />
     <add key="EmailPort" value="587" />
-    <add key="EmailNetworkCredentialUser" value="logiziktech@gmail.com" />
-    <add key="EmailNetworkCredentialPassword" value="paris535" />
-    <add key="EmailAdmin" value="tghis@hotmail.com,madagho@gmail.com" />
+    <add key="EmailNetworkCredentialUser" value="no-reply@fyxme.com" />
+    <add key="EmailNetworkCredentialPassword" value="z@ct10n123$" />
+    <add key="EmailAdmin" value="tghis@hotmail.com,madagho@gmail.com,danny@fyxme.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
